@@ -110,9 +110,9 @@ $rcmail_config['smtp_log'] = TRUE;
 // How many seconds must pass between emails sent by a user
 $rcmail_config['sendmail_delay'] = 0;
 
-// These cols are shown in the message list
-// available cols are: subject, from, to, cc, replyto, date, size, encoding, flag
-$rcmail_config['list_cols'] = array('subject', 'from', 'date', 'size', 'flag');
+// These cols are shown in the message list. Available cols are:
+// subject, from, to, cc, replyto, date, size, encoding, flag, attachment
+$rcmail_config['list_cols'] = array('subject', 'from', 'date', 'size', 'flag', 'attachment');
 
 // Includes should be interpreted as PHP files
 $rcmail_config['skin_include_php'] = FALSE;
