@@ -46,6 +46,7 @@
 <roundcube:object name="messages"
   id="messagelist"
   cellspacing="0"
+  columns=""
   summary="Message list"
   messageIcon="/images/icons/dot.png"
   unreadIcon="/images/icons/unread.png"
